# tket

./: README.md  index.html
.github/workflows/: build_and_test.yml  docs.yml  pytket_docs.yml  release.yml  summary.txt  summary1.txt
bubble/doc/html/: AdjacencyData_8cpp_source.html  AdjacencyData_8hpp.html  AdjacencyData_8hpp__dep__incl.map  AdjacencyData_8hpp__incl.md5  Architectures_8cpp.html  Architectures_8cpp__incl.map  Architectures_8cpp_source.html  Architectures_8hpp__dep__incl.map  Architectures_8hpp__incl.map  Architectures_8hpp__incl.md5  ArticulationPoints_8cpp_source.html  ArticulationPoints__impl_8hpp.html  Assert_8hpp.html  Assert_8hpp__dep__incl.map  Assert_8hpp__dep__incl.md5  Assert_8hpp__incl.md5  AssertionSynthesis_8cpp_source.html  AssertionSynthesis_8hpp__incl.md5  BasicOptimisation_8cpp.html  BasicOptimisation_8cpp_source.html  BiMapHeaders_8hpp__dep__incl.md5  BitOperations_8cpp_source.html  Board__Analysis_8cpp.html  Board__Analysis_8cpp_source.html  (+563 more)
bubble/src/: CMakeLists.txt
bubble/src/Gate/: Gate.cpp  Gate.hpp
bubble/src/OpType/: EdgeType.hpp  OpType.hpp
bubble/src/Ops/: ClassicalOps.cpp  ClassicalOps.hpp  Conditional.cpp  Conditional.hpp  MetaOp.cpp  MetaOp.hpp  Op.cpp  Op.hpp  OpPtr.hpp
bubble/src/Utils/: Assert.hpp  Constants.hpp  CosSinDecomposition.cpp  EigenConfig.hpp  Expression.hpp  HelperFunctions.hpp  PauliStrings.cpp  PauliStrings.hpp  UnitID.cpp  UnitID.hpp
bubble/test-coverage/: index.ArchAwareSynth_Path.cpp.html  index.ArchAwareSynth_Path.hpp.html  index.ArchAwareSynth_SteinerForest.cpp.html  index.ArchAwareSynth_SteinerTree.cpp.html  index.ArchAwareSynth_SteinerTree.hpp.html  index.Architecture_Architectures.cpp.html  index.Architecture_Architectures.hpp.html  index.Characterisation_Cycles.cpp.html  index.Characterisation_Cycles.hpp.html  index.Characterisation_DeviceCharacterisation.cpp.html  index.Characterisation_DeviceCharacterisation.hpp.html  index.Characterisation_FrameRandomisation.cpp.html  index.Characterisation_FrameRandomisation.hpp.html  index.Circuit_AssertionSynthesis.cpp.html  index.Circuit_Boxes.cpp.html  index.Circuit_Boxes.hpp.html  index.Circuit_CircPool.cpp.html  index.Circuit_CircUtils.cpp.html  index.Circuit_Circuit.cpp.html  index.Circuit_Circuit.hpp.html  index.Circuit_CircuitJson.cpp.html  index.Circuit_Command.hpp.html  index.Circuit_CommandJson.cpp.html  index.Circuit_DAGDefs.hpp.html  index.Circuit_DAGProperties.cpp.html  index.Circuit_OpJson.cpp.html  index.Circuit_ThreeQubitConversion.cpp.html  index.Circuit_basic_circ_manip.cpp.html  index.Circuit_latex_drawing.cpp.html  index.Circuit_macro_circ_info.cpp.html  index.Circuit_macro_manipulation.cpp.html  index.Circuit_setters_and_getters.cpp.html  index.Clifford_CliffTableau.cpp.html  index.Clifford_CliffTableau.hpp.html  index.Converters_CliffTableauConverters.cpp.html  index.Converters_Gauss.cpp.html  index.Converters_Gauss.hpp.html  index.Converters_PauliGadget.cpp.html  index.Converters_PauliGraphConverters.cpp.html  index.Converters_PhasePoly.cpp.html  (+115 more)
bubble/tests/: test_json.cpp
pytket/: CMakeLists.txt  conanfile.txt  setup.py
pytket/binders/: passes.cpp  routing.cpp  transform.cpp
pytket/pytket/: __init__.py
pytket/tests/: qasm_test.py
recipes/pybind11/: conanfile.py
recipes/symengine/: conanfile.py
recipes/tket/: conanfile.py
tket/proptests/: proptest.cpp
tket/src/: CMakeLists.txt
tket/src/ArchAwareSynth/: CMakeLists.txt  Path.cpp  Path.hpp  SteinerTree.cpp  SteinerTree.hpp
tket/src/Architecture/: Architecture.cpp  Architecture.hpp  CMakeLists.txt
tket/src/Characterisation/: CMakeLists.txt
tket/src/Characterisation/include/Characterisation/: DeviceCharacterisation.hpp  ErrorTypes.hpp
tket/src/Circuit/: CMakeLists.txt  Circuit.hpp  Conditional.hpp
tket/src/Circuit/include/Circuit/: Circuit.hpp
tket/src/Clifford/: CMakeLists.txt
tket/src/Converters/: CMakeLists.txt
tket/src/Diagonalisation/: CMakeLists.txt
tket/src/Gate/: CMakeLists.txt
tket/src/Graphs/: AbstractGraph.hpp  CMakeLists.txt
tket/src/Mapping/: AASRoute.cpp  AASRoute.hpp
tket/src/MeasurementSetup/: CMakeLists.txt
tket/src/OpType/: CMakeLists.txt
tket/src/Ops/: CMakeLists.txt  Op.hpp
tket/src/PauliGraph/: CMakeLists.txt
tket/src/Predicates/: CMakeLists.txt  CompilerPass.cpp  PassGenerators.cpp  PassLibrary.cpp  Predicates.cpp  Predicates.hpp
tket/src/Predicates/include/Predicates/: PassGenerators.hpp
tket/src/Program/: CMakeLists.txt
tket/src/Routing/: CMakeLists.txt
tket/src/Simulation/: CMakeLists.txt
tket/src/Transformations/: BasicOptimisation.cpp  CMakeLists.txt  CliffordOptimisation.cpp  CliffordReductionPass.cpp  Combinator.cpp  ContextualReduction.cpp  ControlledGates.cpp  Decomposition.cpp  MeasurePass.cpp  OptimisationPass.cpp  PauliOptimisation.cpp  PhaseOptimisation.cpp  Rebase.cpp  Replacement.cpp  ThreeQubitSquash.cpp
tket/src/Transformations/include/Transformations/: BasicOptimisation.hpp  CliffordOptimisation.hpp  CliffordReductionPass.hpp  Combinator.hpp  ContextualReduction.hpp  ControlledGates.hpp  Decomposition.hpp  MeasurePass.hpp  OptimisationPass.hpp  PauliOptimisation.hpp  PhaseOptimisation.hpp  Rebase.hpp  ThreeQubitSquash.hpp  Transform.hpp
tket/src/Utils/: CMakeLists.txt  EigenConfig.hpp  MatrixAnalysis.cpp  MatrixAnalysis.hpp  PauliStrings.cpp  PauliStrings.hpp  UnitID.hpp
tket/src/ZX/: CMakeLists.txt  Rewrite.hpp  ZXDConstructors.cpp  ZXDExpansions.cpp  ZXDGettersSetters.cpp  ZXDManipulation.cpp  ZXDiagram.hpp  ZXDiagramImpl.hpp  ZXGenerator.cpp  ZXGenerator.hpp  ZXRWAxioms.cpp  ZXRWCombinators.cpp  ZXRWDecompositions.cpp  ZXRWGraphLikeForm.cpp  ZXRWGraphLikeSimplification.cpp
tket/tests/: CMakeLists.txt  test_AASRoute.cpp  test_Clifford.cpp  test_Combinators.cpp  test_CompilerPass.cpp  test_ContextOpt.cpp  test_ControlDecomp.cpp  test_FrameRandomisation.cpp  test_Path.cpp  test_PauliGraph.cpp  test_PhaseGadget.cpp  test_PhasePolynomials.cpp  test_Rebase.cpp  test_Routing.cpp  test_SteinerForest.cpp  test_Synthesis.cpp  test_TwoQubitCanonical.cpp  test_json.cpp  tkettestsfiles.cmake
(+4972 files in other folders)
